--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,33 @@
-<!-- Template for the cities component -->
-<div style="text-align:center">
-    <h1>
-      Welcome to {{title}}!
-    </h1>
-  </div>
-  <div class="container">
-    <h2>City list</h2>
-    <p>Click on the city name to get extended forecast</p>
-    <div>
-      <table id="citiesTable" class="table">
-        <thead>
-          <tr>
-            <th>City name</th>
-            <th>Average temperature (C)</th>
-            <th>Average wind strength (m/s)</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let item of items">
-            <td class="forecast-info-main"><img src="https://openweathermap.org/img/w/{{item.weather[0].icon}}.png" class="forecast-icon" alt="forecast"><a [routerLink]="['/info', item.id]">{{item.name}}</a></td>
-            <td class="forecast-info">{{item.main.temp}}</td>
-            <td class="forecast-info-sec">{{item.wind.speed}}</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
+<div class="example-mat">
+  <h2>Wilfrido Garcia Open Weather</h2> <br /> <br />
+  <mat-tab-group>
+    <mat-tab *ngFor="let item of items" label="{{item.name}}">
+      {{item.name}}
 
+<mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>{{item.name}}</mat-card-title>
+      <mat-card-subtitle>{{item.sys.country}}</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+    <mat-card-content>
+       <table>
+         <tr>
+           <th>Average temperature</th>
+           <th>Wind speed</th>
+         </tr>
+         <tr align="left">
+            <td>{{item.main.temp}}°C </td>
+            <td>{{item.wind.speed}} Kph</td>
+         </tr>
+
+       </table>
+    </mat-card-content>
+    <mat-card-actions>
+      <!-- <button mat-button (click)="openDialogApp(item.id)">Forecash</button> -->
+    </mat-card-actions>
+  </mat-card>
+       </mat-tab>
+  </mat-tab-group>
+</div>
