--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,30 +2,47 @@
   <h2>Wilfrido Garcia Open Weather</h2> <br /> <br />
   <mat-tab-group>
     <mat-tab *ngFor="let item of items" label="{{item.name}}">
-      {{item.name}}
-
 <mat-card class="example-card">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>{{item.name}}</mat-card-title>
-      <mat-card-subtitle>{{item.sys.country}}</mat-card-subtitle>
+      <mat-card-title>{{item.name}} | {{item.sys.country}}</mat-card-title>
+      <mat-card-subtitle>  <table>
+        <tr>
+          <th>Average temperature</th>
+          <th> Average Wind speed</th>
+        </tr>
+        <tr align="left">
+           <td>{{item.main.temp}}°C </td>
+           <td>{{item.wind.speed}} Kph</td>
+        </tr>
+      </table></mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
     <mat-card-content>
-       <table>
-         <tr>
-           <th>Average temperature</th>
-           <th>Wind speed</th>
-         </tr>
-         <tr align="left">
-            <td>{{item.main.temp}}°C </td>
-            <td>{{item.wind.speed}} Kph</td>
-         </tr>
-
-       </table>
+     <table>
+      <thead>
+        <tr><th scope="col" >At (date-time)</th>
+          <th scope="col" >Temperature min/max (C)</th>
+          <th scope="col" >Pressure</th>
+          <th scope="col" >Humidity</th>
+          <th scope="col">Description</th>
+          <th scope="col" >Forecast</th>
+          <th scope="col" >Wind speed (m/s)</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="table" *ngFor="let item of items">
+          <td>{{item.dt_txt}}</td>
+          <td>{{item.main.temp_min}}/{{item.main.temp_max}}</td>
+          <td>{{item.main.pressure}}</td>
+          <td>{{item.main.humidity}}</td>
+          <td><img src="https://openweathermap.org/img/w/{{item.weather[0].icon}}.png" class="forecast-icon" alt="forecast"></td>
+          <td >{{item.weather[0].description}}</td>
+          <td>{{item.wind.speed}}</td>
+          </tr>
+          </tbody>
+    </table>
     </mat-card-content>
     <mat-card-actions>
-      <!-- <button mat-button (click)="openDialogApp(item.id)">Forecash</button> -->
     </mat-card-actions>
   </mat-card>
        </mat-tab>
